status line with mem and cpu and cwd

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,40 @@
-set-window-option -g mode-keys vi
+# Vi-style keys in copy mode
+set -g mode-keys vi
+
+# Terminal + colors
+set -g default-terminal "tmux-256color"
+set -ga terminal-features ",xterm-256color:RGB"
+
+# General quality-of-life
+set -g mouse on
+set -g focus-events on
+set -g history-limit 100000
+set -g renumber-windows on
+
+# Pane labels on top for split-heavy workflows
+set -g pane-border-status top
+set -g pane-border-format "#[fg=colour244] #P:#{pane_title} #[default]"
+set -g pane-active-border-style "fg=colour81"
+set -g pane-border-style "fg=colour238"
+
+# Window list (compact but informative)
+setw -g window-status-format "#[fg=colour244] #I:#W #[default]"
+setw -g window-status-current-format "#[fg=colour81,bold] #I:#W #[default]"
+
+# Status bar (explicit, no hostname)
+set -g status-interval 5
+set -g status-style "bg=colour235,fg=colour250"
+set -g status-left-length 60
+set -g status-left ""
+
+# Right status (no clock — just the good stuff)
+set -g status-right-length 80
+set -g status-right "#[fg=colour238]#[fg=colour252,bg=colour238] #(git -C '#{pane_current_path}' rev-parse --abbrev-ref HEAD 2>/dev/null || echo '~') #[fg=colour235,bg=colour238]#[fg=colour179,bg=colour235]  #(awk -v cores=\"$(nproc)\" '{printf \"%.0f%%\", $1*100/cores}' /proc/loadavg) #[fg=colour238,bg=colour235]#[fg=colour114,bg=colour238] 󰍛 #(free -m | awk '/Mem/{printf \"%.0f%%\", $3/$2*100}') #[fg=colour81,bg=colour238]#[fg=colour235,bg=colour81,bold] #{pane_current_path} "
+
+# Fast split bindings (vertical layout by default)
+bind-key v split-window -h -l 45%
+bind-key h split-window -v -l 50%
+bind-key m select-layout main-vertical
+
+# Quick reload
+bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
