adding session name to bottom left

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,7 +25,7 @@ setw -g window-status-current-format "#[fg=colour81,bold] #I:#W #[default]"
 set -g status-interval 5
 set -g status-style "bg=colour235,fg=colour250"
 set -g status-left-length 60
-set -g status-left ""
+set -g status-left "#[fg=colour235,bg=colour81,bold] #S #[fg=colour81,bg=colour235]"
 
 # Right status (no clock — just the good stuff)
 set -g status-right-length 80
@@ -35,6 +35,11 @@ set -g status-right "#[fg=colour238]#[fg=colour252,bg=colour238] #(git -C '#{pan
 bind-key v split-window -h -l 45%
 bind-key h split-window -v -l 50%
 bind-key m select-layout main-vertical
+
+bind-key g split-window -h -l 40% gitui
+bind-key t split-window -h -l 40% btop
+bind-key f split-window -h -l 40% nvim -c Explore
+bind-key y split-window -h -l 45% yazi
 
 # Quick reload
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
